# skill_match

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: prod.yml  test.yml
app/: api.py  app.py  main.py  run.sh
app/pages/: dashboard.py  dashboard2.py
app/service/: cv_parser.py  file_extractor.py  job_parser.py  llm_parser.py  matcher.py  test_matcher.py
deployment/: api-deployment.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml  ui-deployment.yaml  ui-service.yaml
notebooks/: NLP_final.ipynb  Test_1.ipynb  job_description.txt  nlp_final.ipynb  resume.txt
skill_match/: __init__.py  dataset.py  features.py  fonctions_nlp.py  model_nlp.py  ner.py  plots.py  predict.py  preprocessing_job_description.py  top_k_sbert.py  utils.py
skill_match/modeling/: predict.py  train.py
tests/: cv.txt  jd.txt  test_predict.py  test_utils.py
