[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "skill_match"
version = "0.0.1"
description = "Web application that matches a resume to a job offer."
authors = [
  { name = "Ouma-Souley" },
  { name = "moumyt" },
  { name = "Roger-ux-del"},
  { name = "hdkaramoko" },
  { name = "boubakera" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "fastapi>=0.135.1",
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pylint>=4.0.5",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
    "uvicorn>=0.41.0",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["skill_match"]
include = ["pyproject.toml", "skill_match/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["skill_match"]
force-sort-within-sections = true

